...
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="co.planis.confession.AddConfessionActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addConfessionAuthorEt"
        android:gravity="top"
        android:padding="16dp"
        android:backgroundTint="@color/white"
        android:hint="Podaj swój nick.."
        />
    <EditText
        android:layout_below="@id/addConfessionAuthorEt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addConfessionPreviewEt"
        android:gravity="top"
        android:padding="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:hint="Rozpocznij swoje wyznanie..."/>

...
