<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"

    tools:context=".ui.feed.ConfessionsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/confessionListRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        android:id="@+id/confessionListAddFab"
        app:layout_anchor="@id/confessionListRv"
        android:layout_margin="16dp"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="co.planis.confession.ScrollAwareFabBehavior"
        />



</android.support.design.widget.CoordinatorLayout>
